--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
   </head>
   <body>
     <h1>Welcome to Lisbon</h1>
+    <footer>
+      <p>
+        This project was created by
+        <a href="https://github.com/Niki-Nicoli" target="_blank"
+          >Nikilia Clark</a
+        >
+        and is open-sourced on
+        <a href="https://github.com/Niki-Nicoli/SheCodes-Travel-Project"
+          >GitHub</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
