--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Welcome to Lisbon</h1>
+    <h2>Capital City of Portugal</h2>
     <footer>
       <p>
         This project was created by
