--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SheCodes Travel Project</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Welcome to Lisbon</h1>
-    <h2>Capital City of Portugal</h2>
+    <header>
+      <div class="center">
+        <h3>.Travel.</h3>
+        <h1>Welcome to Lisbon</h1>
+        <h2>Capital City of Portugal</h2>
+        <a href="">Learn More</a>
+      </div>
+    </header>
     <footer>
       <p>
         This project was created by
