--- a/index.html
+++ b/index.html
@@ -16,16 +16,60 @@
       </div>
     </header>
     <footer>
-      <p>
-        This project was created by
-        <a href="https://github.com/Niki-Nicoli" target="_blank"
-          >Nikilia Clark</a
-        >
-        and is open-sourced on
-        <a href="https://github.com/Niki-Nicoli/SheCodes-Travel-Project"
-          >GitHub</a
-        >
-      </p>
+      <section class="container">
+        <div class="column">
+          <h4>More About Lisbon</h4>
+          <ul>
+            <li>
+              <a href="https://www.lisbonairport.pt/en/lis/home" target="_blank"
+                >Lisbon Airport website</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.google.com/maps/place/Lisbon,+Portugal/@38.7422179,-9.2015873,13.16z/data=!4m6!3m5!1s0xd19331a61e4f33b:0x400ebbde49036d0!8m2!3d38.7222524!4d-9.1393366!16zL20vMDRsbGI?entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D"
+                target="_blank"
+                >Map of Lisbon</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.lisbonportugaltourism.com/transportation/lisbon-metro-underground-subway-guide-and-map.html"
+                target="_blank"
+                >Public Transport Map</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <h4>About Me</h4>
+          <p>
+            Hi! My name is Matt and I've been living in Lisbon for several
+            years. I'm very fond of the city. I created this page as part of a
+            project for SheCodes Responsive to develop my coding skills.
+          </p>
+        </div>
+        <div class="column">
+          <h4>About This Website</h4>
+          <p>
+            I created this page as part of a project for SheCodes Responsive to
+            develop my coding skills.
+          </p>
+        </div>
+      </section>
+      <div>
+        <p>
+          This project was created by
+          <a href="https://github.com/Niki-Nicoli" target="_blank"
+            >Nikilia Clark</a
+          >
+          and is open-sourced on
+          <a href="https://github.com/Niki-Nicoli/SheCodes-Travel-Project"
+            >GitHub</a
+          >. Hosted on <a href="shecode-travel-project.netlify.app">Netlify</a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
