--- a/index.html
+++ b/index.html
@@ -15,6 +15,37 @@
         <a href="">Learn More</a>
       </div>
     </header>
+    <br />
+    <main>
+      <section>
+        <div>
+          <img src="images/hero-section-image.png" />
+        </div>
+      </section>
+      <section>
+        <div>
+          <h4>WHY LISBON?</h4>
+          <h2>Lisbon, the city of seven hills</h2>
+          <p>
+            The legend has it that Lisbon was named Olissipo by the Romans, for
+            its resemblance to the Roman capital. Just like Rome, Lisbon began
+            its life as a humble settlement nestled among seven hills. However,
+            it wasn't until the 17th century, in the writing of Frey Nicolao
+            d'Oliveira, that Lisbon came to be called 'a cidade das sete
+            colinas' - the city of seven hills.
+          </p>
+          <p>
+            You can still see traces of ancient Lisbon today. Beyond the array
+            of shops with international brands, peaceful streetside cafes
+            selling the iconic pastel de nata and world class restaurants with a
+            variety of global cuisine, you can still wander the seven hills and
+            see the city from above, taking in the rolling terracotta rooftops,
+            the whitewashed walls and on the horizon, the soft blue sea.
+          </p>
+        </div>
+      </section>
+    </main>
+
     <footer>
       <section class="container">
         <div class="column">
