--- a/index.html
+++ b/index.html
@@ -46,6 +46,85 @@
       </section>
     </main>
 
+    <main>
+      <section class="secondary">
+        <h4>CAFES</h4>
+        <h2>My favorite cafés in Lisbon</h2>
+        <div class="section2">
+          <div class="cards">
+            <img src="images/Janis.png" width="`180" />
+            <h3>Cafe Janis</h3>
+            <p>
+              A lively all-day café with an outdoor terrace that serves
+              everything you could want from breakfast and brunch to evening
+              cocktails.
+            </p>
+            <h5>Address:</h5>
+            <p>1A Rua Moeda</p>
+            <h5>What I like about it</h5>
+            <p>
+              This is one of the best brunch spots in Lisbon but if you go at
+              any time of day there will be something delicious on the menu!
+            </p>
+            <button>
+              <a
+                href="https://www.google.com/maps/place/Caf%C3%A9+Janis/@38.7076535,-9.1498302,17z/data=!3m1!4b1!4m6!3m5!1s0xd193480cb12c5bd:0xca7504cb134f1942!8m2!3d38.7076493!4d-9.1472553!16s%2Fg%2F11hd6zrxmr?entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D"
+                target="_blank"
+                >Leran More</a
+              >
+            </button>
+          </div>
+
+          <div class="cards">
+            <img class="card-image" src="images/Seaggull.png" width="`180" />
+            <h3>Seagull Method Café</h3>
+            <p>
+              Everyone's favorite neighborhood cafe with a variety of breakfast
+              and brunch options.
+            </p>
+            <h5>Address:</h5>
+            <p>Rua da Palmeira 23</p>
+            <h5>What I like about it</h5>
+            <p>
+              It's tiny! Not always easy to get a seat but it's such a cozy
+              little place, the food is always tasty and the staff are so
+              friendly.
+            </p>
+            <button>
+              <a
+                href="https://www.google.com/maps/place/Seagull+Method+cafe+%E2%80%A2+Brunch/@38.7146361,-9.1603356,15z/data=!4m6!3m5!1s0xd19333a2feac5bf:0x428bc0902a2efc3e!8m2!3d38.7146366!4d-9.1500359!16s%2Fg%2F11fk423p67?entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D"
+                target="_blank"
+                >Leran More</a
+              >
+            </button>
+          </div>
+
+          <div class="cards">
+            <img src="images/Heim.png" width="`180" />
+            <h3>Heim Cafe</h3>
+            <p>
+              The sister cafe of Seagull Method, this warm cozy cafe will take
+              you from breakfast through to dinner with excellent coffee and
+              locally-sourced wines.
+            </p>
+            <h5>Address:</h5>
+            <p>Rua Santos-O-Velho 2 e 4</p>
+            <h5>What I like about it</h5>
+            <p>
+              Just like Seagull Method, the owners are incredibly friendly and
+              chatty. It has the best coffee in Lisbon!
+            </p>
+            <button>
+              <a
+                href="https://www.google.com/maps/place/Heim+Cafe+Santos/@38.7067656,-9.15874,15.42z/data=!4m6!3m5!1s0xd193483527ff2db:0x6e83c1d32370310c!8m2!3d38.7074548!4d-9.1565016!16s%2Fg%2F11c6lc2x4c?entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D"
+                target="_blank"
+                >Leran More</a
+              >
+            </button>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <section class="container">
         <div class="column">
